--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     text-align: center;
     font-family: sans-serif;
     font-size: 22px;
+    margin: 0px;
 }
 
 .home-page{
@@ -22,6 +23,10 @@ body{
 
 h1{
     font-size: 40px;
+    border: 2px solid black;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    padding: 0px 100px;
 }
 
 h2{
@@ -50,3 +55,20 @@ a.back{
     font-size: 40px;
 }
 
+.links li{
+    display:inline-block;
+    padding: 8px;
+    margin: 0px 10px;
+}
+
+img{
+    border: 2px solid green;
+}
+
+.list li{
+    margin: 8px
+}
+
+.list.las li{
+    margin: 16px;
+}
